--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ body {
 
 .header {
     text-align: center;
-    margin-top: 1.75rem;
-    margin-bottom: 3.5rem;
+    margin-top: 2.75rem;
+    margin-bottom: 4.25rem;
 }
 
 h1 {
@@ -34,6 +34,7 @@ h1 {
 h2 {
     font-weight: 700;
     font-size: 1.5rem;
+    line-height: 1.4;
     margin-bottom: 1rem;
 }
 
