--- a/styles.css
+++ b/styles.css
@@ -1,208 +1,200 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Rubik', sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    background-color: white;
+  font-family: "Rubik", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  background-color: white;
 }
 
-.content {
-    padding: 1rem;
-    max-width: 960px;
-    margin: auto;
+main {
+  padding: 1rem;
+  max-width: 960px;
+  margin: auto;
 }
 
-.header {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    /* text-align: center; */
-    margin-top: 6rem;
-    margin-bottom: 8.25rem;
+.hero {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  /* text-align: center; */
+  margin-top: 6rem;
+  margin-bottom: 8.25rem;
 }
 
-.title {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 h1 {
-    font-weight: 700;
-    font-size: 4rem;
-    line-height: 1.2;
-    color: #2F80ED;
-    padding-bottom: 1.5rem;
-}
-
-h2 {
-    font-weight: 700;
-    font-size: 1.5rem;
-    line-height: 1.4;
-    margin-bottom: 1rem;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 1.2;
+  color: #2f80ed;
+  padding-bottom: 1.5rem;
 }
 
 .hero-img {
-    padding-bottom: 5px;
+  padding-bottom: 5px;
 }
 
 .caption {
-    color: lightgrey;
-    text-transform: uppercase;
-    font-size: 0.75rem;
-    /* margin-top: 5.6rem; */
+  color: lightgrey;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  /* margin-top: 5.6rem; */
 }
 
 .caption > a {
-    color: lightgrey;
+  color: lightgrey;
 }
 
 a {
-    text-decoration: none;
-    color: #2F80ED;
+  text-decoration: none;
+  color: #2f80ed;
 }
 
 a:hover {
-    text-decoration: underline;
-    color: #1D7DFF;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  color: #1d7dff;
 }
 
 .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 1rem;
-    margin-bottom: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .grid > div {
-    padding: 1.5rem;
-    border-radius: 0.3rem;
-    /* border: 1px solid lightgrey; */
-    background-color: #F1F2F4;
+  padding: 1.5rem;
+  border-radius: 0.3rem;
+  /* border: 1px solid lightgrey; */
+  background-color: #f1f2f4;
 }
 
 /*
 .grid > div:nth-child(odd) {
-    background-color: #E8EAED;
+  background-color: #E8EAED;
 }
 */
 
 .grid > div:hover {
-    -webkit-box-shadow: inset 0px 0px 0px 1px rgba(47,128,237,1);
-    -moz-box-shadow: inset 0px 0px 0px 1px rgba(47,128,237,1);
-    box-shadow: inset 0px 0px 0px 1px rgba(47,128,237,1);
+  -webkit-box-shadow: inset 0px 0px 0px 1px rgba(47, 128, 237, 1);
+  -moz-box-shadow: inset 0px 0px 0px 1px rgba(47, 128, 237, 1);
+  box-shadow: inset 0px 0px 0px 1px rgba(47, 128, 237, 1);
+}
+
+/* Card heading */
+h2 {
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 1.4;
+  margin-bottom: 1rem;
 }
 
 .github {
-    text-align: center;
-    padding-top: 2.25rem;
+  text-align: center;
+  padding-top: 2.25rem;
 }
 
 .author-box {
-    display: flex;
-    /* flex-wrap: wrap; */
-    align-items: center;
-    /* background-color: white; */
-    padding: 1.5rem;
-    border-radius: 0.3rem;
-    border: 1px solid #E8EAED;
-    /* box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.05); */
-    margin-top: 3.25rem;
-    margin-bottom: 3rem;
+  display: flex;
+  /* flex-wrap: wrap; */
+  align-items: center;
+  /* background-color: white; */
+  padding: 1.5rem;
+  border-radius: 0.3rem;
+  border: 1px solid #e8eaed;
+  /* box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.05); */
+  margin-top: 3.25rem;
+  margin-bottom: 3rem;
 }
 
 .author-box:hover {
-    border: 1px solid #1D7DFF;
+  border: 1px solid #1d7dff;
 }
 
 .memoji {
-    height: 7rem;
+  height: 7rem;
 }
 
-.footer {
-    /* position: fixed; */
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    /* line-height: 25px; */
-    background-color: #F1F2F4;
-    color: black;
-    text-align: center;
-    font-size: 0.9rem;
-    padding-top: 1.1rem;
-    padding-bottom: 1.1rem;
+footer {
+  /* position: fixed; */
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  /* line-height: 25px; */
+  background-color: #f1f2f4;
+  color: black;
+  text-align: center;
+  font-size: 0.9rem;
+  padding-top: 1.1rem;
+  padding-bottom: 1.1rem;
 }
 
-/* Mobile Styles */
-/* Mobile Styles */
-/* Mobile Styles */
+/* Media queries *************************************************************************************/
 
 @media only screen and (max-width: 924px) {
+  .hero {
+    margin-top: 5rem;
+    margin-bottom: 6.5rem;
+  }
 
-    .header {
-        margin-top: 5rem;
-        margin-bottom: 6.5rem;
-    }
+  h1 {
+    font-size: 3.5rem;
+  }
 
-    h1 {
-        font-size: 3.5rem;
-    }
-
-    .hero-img {
-        max-height: 380px;
-    }
-
+  .hero-img {
+    max-height: 380px;
+  }
 }
 
 @media only screen and (max-width: 839px) {
+  .hero {
+    margin-top: 4rem;
+    margin-bottom: 5.5rem;
+  }
 
-    .header {
-        margin-top: 4rem;
-        margin-bottom: 5.5rem;
-    }
+  h1 {
+    font-size: 3rem;
+  }
 
-    h1 {
-        font-size: 3rem;
-    }
-
-    .hero-img {
-        max-height: 340px;
-    }
-
+  .hero-img {
+    max-height: 340px;
+  }
 }
 
 @media only screen and (max-width: 750px) {
-
-    .grid {
-        grid-template-columns: auto;
-    }
-
+  .grid {
+    grid-template-columns: auto;
+  }
 }
 
 @media only screen and (max-width: 739px) {
+  .hero {
+    justify-content: center;
+    margin-top: 2.75rem;
+    margin-bottom: 4.25rem;
+  }
 
-    .header {
-        justify-content: center;
-        margin-top: 2.75rem;
-        margin-bottom: 4.25rem;
-    }
+  h1 {
+    font-size: 3rem;
+  }
 
-    h1 {
-        font-size: 3rem;
-    }
+  .caption {
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
+  }
 
-    .caption {
-        margin-top: 1.5rem;
-        margin-bottom: 2rem;
-    }
-
-    .hero-img {
-        max-height: 340px;
-    }
-
+  .hero-img {
+    max-height: 340px;
+  }
 }
