--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   background-color: white;
+  color: #263140;
 }
 
 main {
@@ -45,14 +46,14 @@ h1 {
 }
 
 .caption {
-  color: lightgrey;
+  color: #c9cfd6;
   text-transform: uppercase;
   font-size: 0.75rem;
   /* margin-top: 5.6rem; */
 }
 
 .caption > a {
-  color: lightgrey;
+  color: #c9cfd6;
 }
 
 a {
@@ -63,7 +64,7 @@ a {
 a:hover {
   text-decoration: underline;
   text-underline-offset: 4px;
-  color: #1d7dff;
+  color: #0d76ff;
 }
 
 .grid {
@@ -77,7 +78,7 @@ a:hover {
   padding: 1.5rem;
   border-radius: 0.3rem;
   /* border: 1px solid lightgrey; */
-  background-color: #f1f2f4;
+  background-color: #f2f5f7;
 }
 
 /*
@@ -109,10 +110,9 @@ h2 {
   display: flex;
   /* flex-wrap: wrap; */
   align-items: center;
-  /* background-color: white; */
   padding: 1.5rem;
   border-radius: 0.3rem;
-  border: 1px solid #e8eaed;
+  border: 1px solid #e1e5eb;
   /* box-shadow: 0px 0px 5px 5px rgba(0,0,0,0.05); */
   margin-top: 3.25rem;
   margin-bottom: 3rem;
@@ -132,8 +132,8 @@ footer {
   bottom: 0;
   width: 100%;
   /* line-height: 25px; */
-  background-color: #f1f2f4;
-  color: black;
+  background-color: #f2f5f7;
+  /* color: black; */
   text-align: center;
   font-size: 0.9rem;
   padding-top: 1.1rem;
